--- a/app/javascript/stylesheets/layouts/navbar.scss
+++ b/app/javascript/stylesheets/layouts/navbar.scss
@@ -1,15 +1,15 @@
 .navbar{
   background-color: #fff;
   border-bottom: 1px solid rgba(0,0,0,.0975);
-  height: 77px;
+  height: 200px;
   &__brand{
-    height: 35px;
-    width: 176px;
-    background-size: 114px;
+    height: 200px;
+    width: 200px;
+    background-size: 200px;
   }
   &__mainLogo{
     background-repeat: no-repeat;
-    background-image: url("~logo.png");
+    background-image: url("~logo2.png");
   }
   &-nav{
     & > li{
