--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
+<%if user_signed_in? %>
+<%= link_to "サインアウト", destroy_user_session_path, method: :DELETE %>
+<% end %>
 <p>ホームページです</p>
 <%= link_to "仮のボタン","#" , class: "btn btn-primary" %>
