--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,15 +2,19 @@
   <div class="main">
     <h2 class="form-logo mx-auto"></h2>
     <!--form_with追加する-->
-    <div class="form-group ">
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="メールアドレス">
-    </div>
-    <div class="form-group">
-      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="パスワード">
-    </div>
-    <div class="form-group">
-      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="パスワードの確認">
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <%= form_with scope: resource, as: resource_name, url: registration_path(resource_name), local: true do |f| %>
+      <div class="form-group ">
+        <%= f.email_field :email,  autofocus: true, class: "form-control", placeholder: "メールアドレス" %>
+      </div>
+      <div class="form-group">
+        <%= f.password_field :password, autocomplete: "off", class: "form-control", placeholder: "パスワード" %>
+      </div>
+      <div class="form-group">
+        <%= f.password_field :password_comfirmation, autocomplete: "off", class: "form-control", placeholder: "パスワードの確認" %>
+      </div>
+      <div class="action">
+        <%= f.submit"登録する", class: "btn btn-primary" %>
+      </div>
+    <% end %>
   </div>
 </form>
