--- a/app/javascript/stylesheets/users/devise.scss
+++ b/app/javascript/stylesheets/users/devise.scss
@@ -15,3 +15,14 @@
   background-size: cover;
   background-position: center;
 }
+footer{
+  margin-top: auto;
+}
+
+#wrapper{
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+
