--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,10 +1,13 @@
 <form>
   <div class="main">
     <h2 class="form-logo mx-auto"></h2>
-    <!--form_with追加する-->
+    <!--form_with オプションの意味用確認-->
     <%= form_with scope: resource, as: resource_name, url: registration_path(resource_name), local: true do |f| %>
       <div class="form-group ">
         <%= f.email_field :email,  autofocus: true, class: "form-control", placeholder: "メールアドレス" %>
+      </div>
+      <div class="form-group ">
+        <%= f.text_field :name,  autofocus: true, class: "form-control", placeholder: "アカウント名" %>
       </div>
       <div class="form-group">
         <%= f.password_field :password, autocomplete: "off", class: "form-control", placeholder: "パスワード" %>
@@ -12,9 +15,15 @@
       <div class="form-group">
         <%= f.password_field :password_comfirmation, autocomplete: "off", class: "form-control", placeholder: "パスワードの確認" %>
       </div>
-      <div class="action">
+      <div class="actions">
         <%= f.submit"登録する", class: "btn btn-primary" %>
       </div>
     <% end %>
+
+    <br>
+    <p>
+    アカウントをお持ちの方 →
+    <%= link_to "ログイン", new_user_session_path %>
+    </p>
   </div>
 </form>
