--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,17 +11,20 @@
   </head>
 
   <body>
-    <%= render 'partial/navbar' %>
-    <% if flash[:notice] %>
-      <div class = "alert alert-info">
-        <%=flash[:notice]%>
-      </div>
-    <% end %>
-    <%if flash[:alert]%>
-      <div class = "alert alert-danger">
-        <%=flash[:alert]%>
-      </div>
-    <% end %>
-    <%= yield %>
+    <div id="wrapper">
+      <%= render 'partial/navbar' %>
+      <% if flash[:notice] %>
+        <div class = "alert alert-info">
+          <%=flash[:notice]%>
+        </div>
+      <% end %>
+      <%if flash[:alert]%>
+        <div class = "alert alert-danger">
+          <%=flash[:alert]%>
+        </div>
+      <% end %>
+      <%= yield %>
+      <%= render 'partial/footer' %>
+    </div>
   </body>
 </html>
