--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<form>
+<!--<form> -->
   <div class="main">
     <h2 class="form-logo mx-auto"></h2>
     <!--form_with オプションの意味用確認-->
@@ -13,7 +13,7 @@
         <%= f.password_field :password, autocomplete: "off", class: "form-control", placeholder: "パスワード" %>
       </div>
       <div class="form-group">
-        <%= f.password_field :password_comfirmation, autocomplete: "off", class: "form-control", placeholder: "パスワードの確認" %>
+        <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control", placeholder: "パスワードの確認" %>
       </div>
       <div class="actions">
         <%= f.submit"登録する", class: "btn btn-primary" %>
@@ -26,4 +26,4 @@
     <%= link_to "ログイン", new_user_session_path %>
     </p>
   </div>
-</form>
+<!-- </form> -->
