--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,3 +3,5 @@
 <% end %>
 <p>ホームページです</p>
 <%= link_to "仮のボタン","#" , class: "btn btn-primary" %>
+<%= link_to "サインイン","/users/sign_in" , class: "btn btn-primary" %>
+<%= link_to "サインアップ","/users/sign_up" , class: "btn btn-primary" %>
